<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="-44dp"
                android:src="@drawable/abt1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-20dp"
                android:layout_marginLeft="16dp">

                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@string/bold"
                    android:text="@string/abt1"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/abt2" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp">

                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@string/bold"
                    android:text="@string/abt2"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="141dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/abt3" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp">

                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@string/bold"
                    android:text="@string/abt3"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Details"
                    android:layout_marginTop="6dp"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/bold"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BML MUNJAL UNIVERSITY"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="67th Milestone, NH 48"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kapriwas,Haryana 122413"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="T: (+91) 124 2679002"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="info@bmu.edu.in"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>