<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="-24dp"
                android:src="@drawable/bmu" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BML MUNJAL UNIVERSITY"
            android:layout_marginTop="6dp"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp">

                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@string/light"
                    android:text="@string/about_college"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>



            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/darkColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DEPARTMENTS"
                    android:textSize="@dimen/title_size"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#fff"
                    android:fontFamily="@string/bold"/>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/darkColor"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="School of Engineering and Technology"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:textColor="#fff"
                            android:layout_marginHorizontal="@dimen/text_margin"
                            android:textSize="@dimen/text_size"
                            android:fontFamily="@string/bold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="School of Management"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:textColor="#fff"
                            android:layout_marginHorizontal="@dimen/text_margin"
                            android:textSize="@dimen/text_size"
                            android:fontFamily="@string/bold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="School of Law"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:textColor="#fff"
                            android:layout_marginHorizontal="@dimen/text_margin"
                            android:textSize="@dimen/text_size"
                            android:fontFamily="@string/bold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="School of Economics and Commerce"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:layout_marginHorizontal="@dimen/text_margin"
                            android:textSize="@dimen/text_size"
                            android:textColor="#fff"
                            android:fontFamily="@string/bold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey"/>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Details"
                    android:layout_marginTop="6dp"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/bold"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BML MUNJAL UNIVERSITY"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="67th Milestone, NH 48"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kapriwas,Haryana 122413"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="T: (+91) 124 2679002"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="info@bmu.edu.in"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>

            </LinearLayout>

    </LinearLayout>

    </ScrollView>

</FrameLayout>